--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -1,52 +1,52 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: backend-base
+  name: proyecto-final
   namespace: devops
 data:
-  USERNAME: "Oscar Garrido"
+  USER: "Oscar Garrido"
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: backend-base
+  name: proyecto-final
   namespace: devops
 type: Opaque
 data:
-  KEY: QUFBREtFWTNFU1NFVFI= #APIKEYSECRET
+  API_KEY: QUFBREtFWTNFU1NFVFI= #APIKEYSECRET
 ---    
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: backend-base-deployment
+  name: proyecto-final-deployment
   namespace: devops
   labels:
-    app: backend-base
+    app: proyecto-final
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: backend-base
+      app: proyecto-final
   template:
     metadata:
       labels:
-        app: backend-base
+        app: proyecto-final
     spec:
       containers:
-      - name: backend-base
-        image: localhost:8082/backend-base:latest
+      - name: proyecto-final
+        image: localhost:8082/proyecto-devops:latest
         imagePullPolicy: IfNotPresent
         env:
-        - name: USERNAME
+        - name: USER
           valueFrom:
             configMapKeyRef:
-              name: backend-base
-              key: USERNAME
-        - name: CREDENCIALES_BD
+              name: proyecto-final
+              key: USER
+        - name: API_KEY
           valueFrom:
             secretKeyRef:
-              name: backend-base
-              key: KEY
+              name: proyecto-final
+              key: API_KEY
         ports:
         - containerPort: 3001
       imagePullSecrets:
@@ -55,13 +55,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-base-svc
+  name: proyecto-final-svc
   namespace: devops
   labels:
-    app: backend-base
+    app: proyecto-final
 spec:
   selector:
-    app: backend-base
+    app: proyecto-final
   ports:
   - protocol: TCP
     port: 80
@@ -70,7 +70,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: backend-base-ingress
+  name: proyecto-final-ingress
   namespace: devops
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
@@ -79,10 +79,10 @@ spec:
   rules:
   - http:
       paths:
-      - path: /backend-path(/|$)(.*)
+      - path: /proyecto(/|$)(.*)
         pathType: ImplementationSpecific
         backend:
           service:
-            name: backend-base-svc
+            name: proyecto-final-svc
             port:
               number: 80
